--- a/content/resources/22-105f05-th.md
+++ b/content/resources/22-105f05-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/22-105-electromagnetic-interactions-fall-2005/22003605dc23c82e1af63e26cb7b990e_22-105f05-th.jpg
+file: /media/courses/22-105-electromagnetic-interactions-fall-2005/22003605dc23c82e1af63e26cb7b990e_22-105f05-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: An aurora is caused by interactions between charged particles in solar
@@ -10,6 +10,8 @@ image_metadata:
     courtesy of the U.S. Air Force.)
   credit: ''
   image-alt: A green Aurora Borealis shimmers over snow-covered Alaskan fields.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 22-105f05-th.jpg
 uid: 22003605-dc23-c82e-1af6-3e26cb7b990e
