--- a/content/resources/22-105f05.md
+++ b/content/resources/22-105f05.md
@@ -4,7 +4,7 @@ description: An aurora is caused by interactions between charged particles in so
   winds and atoms in the Earth's ionosphere, and shaped by the Earth's magnetic field.
   It produces its own magnetic fluctuationsand electrical currents. (Image courtesy
   of the U.S. Air Force.)
-file: /media/courses/22-105-electromagnetic-interactions-fall-2005/dfaf8ba6d6f932d4bf4750a02ca82680_22-105f05.jpg
+file: /courses/22-105-electromagnetic-interactions-fall-2005/dfaf8ba6d6f932d4bf4750a02ca82680_22-105f05.jpg
 file_type: image/jpeg
 image_metadata:
   caption: An aurora is caused by interactions between charged particles in solar
@@ -19,3 +19,5 @@ resourcetype: Image
 title: 22-105f05.jpg
 uid: dfaf8ba6-d6f9-32d4-bf47-50a02ca82680
 ---
+An aurora is caused by interactions between charged particles in solar winds and atoms in the Earth's ionosphere, and shaped by the Earth's magnetic field. It produces its own magnetic fluctuationsand electrical currents. (Image courtesy of the U.S. Air Force.)
+
