Sync all content

--- a/content/resources/22-105f05-th.md
+++ b/content/resources/22-105f05-th.md
@@ -11,10 +11,10 @@ image_metadata:
   credit: ''
   image-alt: A green Aurora Borealis shimmers over snow-covered Alaskan fields.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 22-105f05-th.jpg
 uid: 22003605-dc23-c82e-1af6-3e26cb7b990e
 ---
 New image Upload
-
