--- a/content/resources/22-105f05.md
+++ b/content/resources/22-105f05.md
@@ -14,10 +14,10 @@ image_metadata:
   credit: ''
   image-alt: A green Aurora Borealis shimmers over snow-covered Alaskan fields.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 22-105f05.jpg
 uid: dfaf8ba6-d6f9-32d4-bf47-50a02ca82680
 ---
 An aurora is caused by interactions between charged particles in solar winds and atoms in the Earth's ionosphere, and shaped by the Earth's magnetic field. It produces its own magnetic fluctuationsand electrical currents. (Image courtesy of the U.S. Air Force.)
-
