Sync all content

--- a/content/resources/22-105f05.md
+++ b/content/resources/22-105f05.md
@@ -5,6 +5,7 @@ description: An aurora is caused by interactions between charged particles in so
   It produces its own magnetic fluctuationsand electrical currents. (Image courtesy
   of the U.S. Air Force.)
 file: /courses/22-105-electromagnetic-interactions-fall-2005/dfaf8ba6d6f932d4bf4750a02ca82680_22-105f05.jpg
+file_size: 78047
 file_type: image/jpeg
 image_metadata:
   caption: An aurora is caused by interactions between charged particles in solar
