--- a/content/resources/22-105f05-th.md
+++ b/content/resources/22-105f05-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: New image Upload
 file: /courses/22-105-electromagnetic-interactions-fall-2005/22003605dc23c82e1af63e26cb7b990e_22-105f05-th.jpg
+file_size: 7002
 file_type: image/jpeg
 image_metadata:
   caption: An aurora is caused by interactions between charged particles in solar
